--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<section class="Cont" id="Cont">
 			<div class="Cont-inicioInfo">
-				<a href="Kapa_v1.6.1_apkpure.com.apk"><img src="images/kapa.png" alt="kapa"></a>
+				<a href="Kapa_v1.6.1_apkpure.com.apk"><img src="images/kapa.jpg" alt="kapa"></a>
 			</div>
 	</section>
 </body>
