--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8"/>
-	<meta name="theme-color" content="#009999"><!-- Chrome, Firefox OS and Opera -->
-	<meta name="msapplication-navbutton-color" content="#009999"><!-- Windows Phone -->
-	<meta name="apple-mobile-web-app-status-bar-style" content="#009999"><!-- iOS Safari -->
+	<meta name="theme-color" content="#e30711"><!-- Chrome, Firefox OS and Opera -->
+	<meta name="msapplication-navbutton-color" content="#e30711"><!-- Windows Phone -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#e30711"><!-- iOS Safari -->
 	<title>kapa</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 	<!-- smoosh -->
