--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<title>kapa</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 	<!-- smoosh -->
-	<link rel="stylesheet" href="css/estilos.css"/>
+	<link rel="stylesheet" href="styles/estilos.css"/>
 	<!-- endsmoosh -->
 	<META HTTP-EQUIV="Refresh" CONTENT="3;Kapa_v1.6.1_apkpure.com.apk">
 </head>
 <body>
 	<section class="Cont" id="Cont">
 			<div class="Cont-inicioInfo">
-				<a href="Kapa_v1.6.1_apkpure.com.apk" rel="prefetch"><img src="images/kapa.jpg" alt="kapa" id="kapaimg"></a>
+				<a href="Kapa_v1.6.1_apkpure.com.apk"><img src="images/kapa.jpg" alt="kapa" id="kapaimg"></a>
 			</div>
 	</section>
 </body>
